Bug 324899 - Contact list + kpeople crash on startup
Summary: Contact list + kpeople crash on startup
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Compiled Sources Linux
: HI crash
Target Milestone: 0.7-beta
Assignee: Telepathy Bugs
URL:
Keywords: drkonqi
: 324871 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-13 22:00 UTC by Daniele E. Domenichelli
Modified: 2013-09-23 14:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2013-09-13 22:00:44 UTC
Application: ktp-contactlist (0.6.3)
KDE Platform Version: 4.10.5 (Compiled from sources)
Qt Version: 4.8.5
Operating System: Linux 3.10-2-amd64 x86_64
Distribution: Debian GNU/Linux testing (jessie)

-- Information about the crash:
- What I was doing when the application crashed:

Just closed and started the contact list, I cannot reproduce it.

The crash can be reproduced sometimes.

-- Backtrace:
Application: KDE Telepathy Contact List (ktp-contactlist), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f1e80957840 (LWP 16614))]

Thread 4 (Thread 0x7f1e69639700 (LWP 16621)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f1e7e03e446 in wait (time=18446744073709551615, this=0x20afdd0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x20afb20, mutex=mutex@entry=0x20afb18, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f1e79f6ec6b in Soprano::Util::AsyncQuery::Private::run (this=0x20afae0) at ../../soprano/util/asyncquery.cpp:118
#4  0x00007f1e7e03df6f in QThreadPrivate::start (arg=0x20afae0) at thread/qthread_unix.cpp:338
#5  0x00007f1e77d59e0e in start_thread (arg=0x7f1e69639700) at pthread_create.c:311
#6  0x00007f1e7b90793d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f1e63fff700 (LWP 16650)):
#0  0x00007f1e77d5ce1f in __pthread_mutex_unlock_usercnt (mutex=0x261fc20, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  0x00007f1e7b0812c1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f1e7b0418c8 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f1e7b0420b3 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f1e7b04229c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f1e6817ca1d in ?? () from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#6  0x00007f1e7b0661d5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f1e77d59e0e in start_thread (arg=0x7f1e63fff700) at pthread_create.c:311
#8  0x00007f1e7b90793d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f1e637fe700 (LWP 16651)):
#0  0x00007f1e7b8fc19d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f1e7b042194 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f1e7b0425fa in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f1e7ab15d26 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f1e7b0661d5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f1e77d59e0e in start_thread (arg=0x7f1e637fe700) at pthread_create.c:311
#6  0x00007f1e7b90793d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f1e80957840 (LWP 16614)):
[KCrash Handler]
#6  0x00007f1e7b8541e5 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#7  0x00007f1e7b857398 in __GI_abort () at abort.c:90
#8  0x00007f1e7e033912 in qt_message_output (msgType=msgType@entry=QtFatalMsg, buf=0x269ab98 "ASSERT: \"sourceIndex.isValid()\" in file /opt/telepathy/ktp-common-internals/KTp/Models/abstract-grouping-proxy-model.cpp, line 213") at global/qglobal.cpp:2347
#9  0x00007f1e7e033c79 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, msg=0x7f1e7e19eee0 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7fff432cc8f8) at global/qglobal.cpp:2393
#10 0x00007f1e7e034484 in qFatal (msg=<optimized out>) at global/qglobal.cpp:2576
#11 0x00007f1e80309370 in KTp::AbstractGroupingProxyModel::addProxyNode (this=0x26129c0, sourceIndex=..., parent=0x26f8b10) at /opt/telepathy/ktp-common-internals/KTp/Models/abstract-grouping-proxy-model.cpp:213
#12 0x00007f1e8030a2a5 in KTp::AbstractGroupingProxyModel::onDataChanged (this=0x26129c0, sourceTopLeft=..., sourceBottomRight=...) at /opt/telepathy/ktp-common-internals/KTp/Models/abstract-grouping-proxy-model.cpp:317
#13 0x00007f1e80307a35 in KTp::AbstractGroupingProxyModel::qt_static_metacall (_o=0x26129c0, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff432cce40) at /opt/telepathy/ktp-common-internals/build/KTp/Models/moc_abstract-grouping-proxy-model.cpp:60
#14 0x00007f1e7e151cf8 in QMetaObject::activate (sender=sender@entry=0x260b1c0, m=m@entry=0x7f1e7e4a16a0 <QAbstractItemModel::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff432cce40) at kernel/qobject.cpp:3547
#15 0x00007f1e7e19b9d7 in QAbstractItemModel::dataChanged (this=this@entry=0x260b1c0, _t1=..., _t2=...) at .moc/release-shared/moc_qabstractitemmodel.cpp:163
#16 0x00007f1e7cabc985 in QIdentityProxyModelPrivate::_q_sourceDataChanged (this=<optimized out>, topLeft=..., bottomRight=...) at itemviews/qidentityproxymodel.cpp:472
#17 0x00007f1e7e151cf8 in QMetaObject::activate (sender=sender@entry=0x1f94130, m=m@entry=0x7f1e7e4a16a0 <QAbstractItemModel::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff432ccfe0) at kernel/qobject.cpp:3547
#18 0x00007f1e7e19b9d7 in QAbstractItemModel::dataChanged (this=this@entry=0x1f94130, _t1=..., _t2=...) at .moc/release-shared/moc_qabstractitemmodel.cpp:163
#19 0x00007f1e7cabc985 in QIdentityProxyModelPrivate::_q_sourceDataChanged (this=<optimized out>, topLeft=..., bottomRight=...) at itemviews/qidentityproxymodel.cpp:472
#20 0x00007f1e7e151cf8 in QMetaObject::activate (sender=0x1eebc00, m=m@entry=0x7f1e7e4a16a0 <QAbstractItemModel::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff432cd180) at kernel/qobject.cpp:3547
#21 0x00007f1e7e19b9d7 in QAbstractItemModel::dataChanged (this=<optimized out>, _t1=..., _t2=...) at .moc/release-shared/moc_qabstractitemmodel.cpp:163
#22 0x00007f1e7e6db24d in KPeople::PersonsModel::contactChanged (this=0x1eebc00, uri=...) at /opt/telepathy/libkpeople/src/personsmodel.cpp:314
#23 0x00007f1e7e6dda66 in KPeople::PersonsModel::qt_static_metacall (_o=0x1eebc00, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x7fff432cd3e0) at /opt/telepathy/libkpeople/build/src/moc_personsmodel.cpp:78
#24 0x00007f1e7e151cf8 in QMetaObject::activate (sender=0x1eea060, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff432cd3e0) at kernel/qobject.cpp:3547
#25 0x00007f1e7e6d23b7 in KPeople::DataSourceWatcher::contactChanged (this=0x1eea060, _t1=...) at /opt/telepathy/libkpeople/build/src/moc_datasourcewatcher.cpp:103
#26 0x00007f1e7e6d8008 in KPeople::DataSourceWatcher::onContactChanged (this=0x1eea060, contactId=...) at /opt/telepathy/libkpeople/src/datasourcewatcher.cpp:63
#27 0x00007f1e7e6d2272 in KPeople::DataSourceWatcher::qt_static_metacall (_o=0x1eea060, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fff432cd590) at /opt/telepathy/libkpeople/build/src/moc_datasourcewatcher.cpp:54
#28 0x00007f1e7e151cf8 in QMetaObject::activate (sender=0x1ecd460, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff432cd590) at kernel/qobject.cpp:3547
#29 0x00007f1e7e6d2b73 in KPeople::BasePersonsDataSource::contactChanged (this=0x1ecd460, _t1=...) at /opt/telepathy/libkpeople/build/src/moc_basepersonsdatasource.cpp:98
#30 0x00007f1e8058eb7f in IMPersonsDataSource::Private::onAllKnownContactsChanged (this=0x1ecb220, contactsAdded=..., contactsRemoved=...) at /opt/telepathy/ktp-common-internals/KTp/im-persons-data-source.cpp:65
#31 0x00007f1e8058ffef in IMPersonsDataSource::onAccountManagerReady (this=0x1ecd460, op=0x1eef550) at /opt/telepathy/ktp-common-internals/KTp/im-persons-data-source.cpp:184
#32 0x00007f1e8059036c in IMPersonsDataSource::qt_static_metacall (_o=0x1ecd460, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff432cd8e0) at /opt/telepathy/ktp-common-internals/build/KTp/im-persons-data-source.moc:55
#33 0x00007f1e7e151cf8 in QMetaObject::activate (sender=sender@entry=0x1eef550, m=m@entry=0x7f1e7f12e6c0 <Tp::PendingOperation::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff432cd8e0) at kernel/qobject.cpp:3547
#34 0x00007f1e7ed4d75f in Tp::PendingOperation::finished (this=this@entry=0x1eef550, _t1=_t1@entry=0x1eef550) at /opt/telepathy/telepathy-qt/build/TelepathyQt/_gen/pending-operation.moc.hpp:111
#35 0x00007f1e7ed4d7a1 in Tp::PendingOperation::emitFinished (this=0x1eef550) at /opt/telepathy/telepathy-qt/TelepathyQt/pending-operation.cpp:123
#36 0x00007f1e7e1560ae in QObject::event (this=0x1eef550, e=<optimized out>) at kernel/qobject.cpp:1194
#37 0x00007f1e7c5af70c in QApplicationPrivate::notify_helper (this=this@entry=0x1d1fc30, receiver=receiver@entry=0x1eef550, e=e@entry=0x21043b0) at kernel/qapplication.cpp:4567
#38 0x00007f1e7c5b5d80 in QApplication::notify (this=this@entry=0x7fff432cdfa0, receiver=receiver@entry=0x1eef550, e=e@entry=0x21043b0) at kernel/qapplication.cpp:4353
#39 0x00007f1e7fa6ecfa in KApplication::notify (this=0x7fff432cdfa0, receiver=0x1eef550, event=0x21043b0) at ../../kdeui/kernel/kapplication.cpp:311
#40 0x00007f1e7e13db5d in QCoreApplication::notifyInternal (this=0x7fff432cdfa0, receiver=receiver@entry=0x1eef550, event=event@entry=0x21043b0) at kernel/qcoreapplication.cpp:949
#41 0x00007f1e7e1410bf in sendEvent (event=0x21043b0, receiver=0x1eef550) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#42 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x1c5a580) at kernel/qcoreapplication.cpp:1573
#43 0x00007f1e7e141563 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1466
#44 0x00007f1e7e16b423 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#45 postEventSourceDispatch (s=0x1d08420) at kernel/qeventdispatcher_glib.cpp:280
#46 0x00007f1e7b041ea6 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#47 0x00007f1e7b0421f8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#48 0x00007f1e7b04229c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#49 0x00007f1e7e16ace5 in QEventDispatcherGlib::processEvents (this=0x1c5bee0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#50 0x00007f1e7c64d846 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#51 0x00007f1e7e13c7bf in QEventLoop::processEvents (this=this@entry=0x7fff432cdf20, flags=...) at kernel/qeventloop.cpp:149
#52 0x00007f1e7e13cab5 in QEventLoop::exec (this=this@entry=0x7fff432cdf20, flags=...) at kernel/qeventloop.cpp:204
#53 0x00007f1e7e1420fb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1221
#54 0x000000000043c109 in main (argc=1, argv=0x7fff432ce268) at /opt/telepathy/ktp-contact-list/main.cpp:63

Reported using DrKonqi
Comment 1 Daniele E. Domenichelli 2013-09-13 22:02:12 UTC
I was wrong, I can reproduce it, actually it started happening every time and now I cannot start the contact list...
Comment 2 Daniele E. Domenichelli 2013-09-13 22:03:38 UTC
It was "fixed" by going offline... now I can start the contact list again, but cannot reproduce the problem anymore
Comment 3 Daniele E. Domenichelli 2013-09-13 22:07:22 UTC
Ok I can reproduce it again (sorry for the spam)
Go offline
Close the contact list
Go online from the presence plasmoid
Start the contact list from the presence plasmoid while connecting
  => crash and cannot start it until I go offline again
Comment 4 Martin Klapetek 2013-09-14 08:46:15 UTC
*** Bug 324871 has been marked as a duplicate of this bug. ***
Comment 5 David Edmundson 2013-09-23 14:08:32 UTC
Git commit d20b3730866ab5682f4aa687f4b22bd062021828 by David Edmundson.
Committed on 23/09/2013 at 03:45.
Pushed by davidedmundson into branch 'master'.

Simplify model index looping in AbstractGroupingProxyModel::onDataChanged();
REVIEW: 112887

M  +4    -1    KTp/Models/abstract-grouping-proxy-model.cpp

http://commits.kde.org/telepathy-common-internals/d20b3730866ab5682f4aa687f4b22bd062021828