Simplify model index looping in AbstractGroupingProxyModel::onDataChanged();

BUG: 324899
REVIEW: 112887